--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!---End header--->
 
 <!-- Start Home -->
-<table border="0" id="home" width="100%" cellpadding="0" cellspacing="0" bgcolor="#292929">
+<table border="0" id="home" width="85%%" cellpadding="0" cellspacing="0" bgcolor="#292929" align="center">
   <tr>
   	 <td>
   	 	<table border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
@@ -91,7 +91,7 @@ Advanced learner and Advanced programmer.<br><br><br>
 Yahooooooo!!!!</font>
 
 <hr>
-<a href="#.pdf"><button> Download CV</button> </a>
+<a href="https://drive.google.com/file/d/1-aEGY6mg-2XAdZiKkQDLi4_eQmz8xTUl/view?usp=drivesdk"><button> Download CV</button> </a>
 <a href="mailto:jobaerofficial@gmail.com"><button> Hire Me</button> </a>
 
 </td>
