--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 <tr><td>
 <table border="0" width="85%" align="center" cellpadding="15">
 <tr>
-<td> <font face="Open Sans" size="5" color="black"> <b> Jobaer_Official</b></font></td>
+<td> <font face="Open Sans" size="5" color="black" class="logo"> <b> Jobaer_Official</b></font></td>
 
 <td width="20%"></td>
-<td> <a href="#"> <font color="black">Home </font> </a></td>
-<td> <a href="#"><font color="black">Services </font></a></td>
-<td> <a href="#"><font color="black">Skills </font></a></td>
-<td> <a href="#"><font color="black">Team </font> </a></td>
-<td> <a href="#"><font color="black">Contact Us </font> </a></td>
+<td> <a href="#"> <font color="black" class="a1">Home </font> </a></td>
+<td> <a href="#"><font color="black" class="a1">Services </font></a></td>
+<td> <a href="#"><font color="black" class="a1">Skills </font></a></td>
+<td> <a href="#"><font color="black" class="a1">Team </font> </a></td>
+<td> <a href="contact.html" _blanck><font color="black" class="a1">Contact Us </font> </a></td>
+
 </tr>
 </table>
 </td></tr>
@@ -40,10 +41,10 @@
 <!---End header--->
 
 <!-- Start Home -->
-<table border="0" id="home" width="85%%" cellpadding="0" cellspacing="0" bgcolor="#292929" align="center">
+<table border="0" id="home" width="80%" cellpadding="0" cellspacing="0" bgcolor="#292929" align="center">
   <tr>
   	 <td>
-  	 	<table border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
+  	 	<table border="0" width="100%" cellpadding="15" cellspacing="0" align="center">
            <tr>
            	   <td align="center" valign="middle" height="300">
            	   	 <h3>
@@ -70,9 +71,9 @@
 
 
 <!---Home---->
-<table>
+<table width="100%">
 <tr><td>
-<table width="120%" border="0" align="center" cellpadding="15px">
+<table width="95%" border="0" align="center" cellpadding="15px">
 <tr>
 <td> 
 	<h1> <font face="Open Sans" size="7"> Hi, </font></h1>
@@ -91,14 +92,16 @@ Advanced learner and Advanced programmer.<br><br><br>
 Yahooooooo!!!!</font>
 
 <hr>
-<a href="https://drive.google.com/file/d/1-aEGY6mg-2XAdZiKkQDLi4_eQmz8xTUl/view?usp=drivesdk"><button> Download CV</button> </a>
+<a href="web-cv.pdf"><button> Download CV</button> </a>
 <a href="mailto:jobaerofficial@gmail.com"><button> Hire Me</button> </a>
 
 </td>
 
+<tr>
 <td>
-<img src="https://i.ibb.co/584czgK/hand-drawn-web-developers-23-2148819604.jpg" height="220px">
+<img src="section1.png" width="100%">
 </td>
+</tr>
 
 </tr>
 </table>
@@ -107,8 +110,27 @@ Yahooooooo!!!!</font>
 <!---End Home---->
 
   
+  <br><br><br><br>
   
   
+  
+<!--- Footer--->
+
+<table width="100%">
+<tr><td>
+
+<table border="0" width="85%" align="center" cellpadding="15">
+
+<tr bgcolor="black" align="center"> 
+<td colspan="3"> <font color="#fff"> <font size="1">
+ <pre>copyright @ JOBAER  |  A official website</font></pre></font></td>
+</tr>
+</table>
+
+</td></tr>
+</table>
+
+<!--- End Footer--->
   
   
   
